--- a/ODK.Website.Angular/src/app/modules/forms/components/form-control-label/form-control-label.component.html
+++ b/ODK.Website.Angular/src/app/modules/forms/components/form-control-label/form-control-label.component.html
@@ -1,5 +1,5 @@
 <ng-container *ngIf="viewModel">
-  <label [attr.for]="viewModel.controlId" class="form-control-label">
+  <label [attr.for]="controlId" class="form-control-label">
     {{viewModel.text}}
   </label>
   <span *ngIf="viewModel.helpText">
