--- a/ODK.Website.Angular/src/app/modules/forms/components/inputs/text-input/text-input.component.html
+++ b/ODK.Website.Angular/src/app/modules/forms/components/inputs/text-input/text-input.component.html
@@ -4,5 +4,5 @@
       class="form-control"
       [id]="controlId" [name]="controlId"
       [formControlName]="controlId"
-      (blur)="validate()" />
+      (blur)="onValidate()" />
 </div>
