Start migrating forms to dynamic forms

--- a/ODK.Website.Angular/src/app/components/account/change-password/change-password.component.html
+++ b/ODK.Website.Angular/src/app/components/account/change-password/change-password.component.html
@@ -1,4 +1,4 @@
 <app-body [breadcrumbs]="breadcrumbs">
-    <app-form [form]="form" (formSubmit)="onFormSubmit()">
-    </app-form>
+    <app-dynamic-form [form]="form" (formSubmit)="onFormSubmit()">
+    </app-dynamic-form>
 </app-body>
