--- a/ODK.Website.Angular/src/app/modules/forms/components/form-control/form-control.component.html
+++ b/ODK.Website.Angular/src/app/modules/forms/components/form-control/form-control.component.html
@@ -1,58 +1,9 @@
-<div *ngIf="viewModel" class="form-group" [class.required]="required" [formGroup]="formGroup">
-    <app-form-control-label *ngIf="showLabel" [controlId]="viewModel.id" [viewModel]="viewModel.label">      
-    </app-form-control-label>
-    
-    <!-- text / password / date -->
-    <input *ngIf="type === 'text' || type === 'password' || type === 'date'"
-        [attr.type]="type"
-        [attr.match]="match"
-        [attr.pattern]="pattern"
-        [attr.required]="required ? 'required' : null"
-        class="form-control"
-        [id]="viewModel.id" [name]="viewModel.id" [formControlName]="viewModel.id"
-        (blur)="validate()" />
-
-    <!-- textarea -->
-    <textarea *ngIf="type === 'textarea'"
-        rows="3"
-        [attr.required]="required ? 'required' : null"
-        class="form-control"
-        [id]="viewModel.id" [name]="viewModel.id" [formControlName]="viewModel.id"
-        (blur)="validate()">
-    </textarea>
-
-    <!-- dropdown -->
-    <ng-container *ngIf="type === 'dropdown'">
-        <select class="form-control"
-            [attr.required]="required ? 'required' : null"
-            [id]="viewModel.id" [name]="viewModel.id" [formControlName]="viewModel.id">
-            <option *ngIf="viewModel.dropDown.default" value=""
-                [attr.selected]="selectedOption === viewModel.dropDown.default ? 'selected' : null">
-                {{viewModel.dropDown.default}}
-            </option>
-            <option *ngFor="let option of viewModel.dropDown.options" [attr.value]="option"
-                [attr.selected]="selectedOption === option ? 'selected' : null">
-                {{option}}
-            </option>
-        </select>
-    </ng-container>
-
-    <!-- checkbox  -->
-    <div *ngIf="type === 'checkbox'" class="form-check">
-        <input class="form-check-input" type="checkbox"
-            [id]="viewModel.id" [name]="viewModel.id" [formControlName]="viewModel.id" />
-        <app-form-control-label [controlId]="viewModel.id" [viewModel]="viewModel.label"></app-form-control-label>
-    </div>
-
-    <!-- readonly -->
-    <div *ngIf="type === 'readonly'" class="form-control-plaintext">
-        {{viewModel.value}}
-    </div>
-
-    <app-form-control-validation *ngIf="control" [control]="control" [label]="viewModel.label" [validated]="validated">
-    </app-form-control-validation>
+<div class="form-group" [class.required]="required">
+  <app-form-control-label *ngIf="showLabel && viewModel.label.text" [controlId]="viewModel.id" [viewModel]="viewModel.label">
+  </app-form-control-label>
+  <div #inputcontainer>
+  </div>
+  <app-form-control-validation *ngIf="control" [control]="control" [label]="viewModel.label.text"
+    [validated]="validated">
+  </app-form-control-validation>
 </div>
-
-<app-form-control *ngFor="let child of childControls" [formGroup]="formGroup" [viewModel]="child"
-    [validated]="validated" [updated]="updated" (valueChange)="onChildControlValueChanged(child)">
-</app-form-control>
