--- a/ODK.Website.Angular/src/app/modules/forms/components/form/form.component.html
+++ b/ODK.Website.Angular/src/app/modules/forms/components/form/form.component.html
@@ -1,12 +1,12 @@
 <form *ngIf="form" (ngSubmit)="onSubmit()" [class.was-validated]="form.validated" novalidate>
-    <fieldset [attr.disabled]="submitting ? 'disabled' : null" class="overlay-container">
-        <app-form-controls [form]="form" [validated]="form.validated"></app-form-controls>
-        <ng-container *ngIf="form.buttonText">
-            <div class="d-flex align-items-center" [class.justify-content-end]="justifyButton === 'end'">
-                <button type="submit" class="btn btn-primary">{{form.buttonText}}</button>
-                <ng-content select="[app-button-row]"></ng-content>
-            </div>
-            <app-error-messages [messages]="messages"></app-error-messages>
-        </ng-container>
-    </fieldset>
+  <fieldset [attr.disabled]="submitting ? 'disabled' : null" class="overlay-container">
+    <app-form-controls [form]="form" [validated]="form.validated"></app-form-controls>
+      <ng-container *ngIf="form.buttonText">
+          <div class="d-flex align-items-center">
+              <button type="submit" class="btn btn-primary">{{form.buttonText}}</button>
+              <ng-content select="[app-button-row]"></ng-content>
+          </div>
+          <app-error-messages [messages]="messages"></app-error-messages>
+      </ng-container>
+  </fieldset>
 </form>
