--- a/ODK.Website.Angular/src/app/components/account/login/login.component.html
+++ b/ODK.Website.Angular/src/app/components/account/login/login.component.html
@@ -1,7 +1,7 @@
 <app-body>
-    <app-dynamic-form [form]="form" (formSubmit)="onFormSubmit()">
+    <app-form [form]="form" (formSubmit)="onFormSubmit()">
         <div app-button-row class="ml-auto">
             <a [routerLink]="links.forgottenPassword">Forgotten password?</a>
         </div>
-    </app-dynamic-form>
+    </app-form>
 </app-body>
