--- a/ODK.Website.Angular/src/app/components/account/profile-form/profile-form.component.html
+++ b/ODK.Website.Angular/src/app/components/account/profile-form/profile-form.component.html
@@ -1,1 +1,1 @@
-<app-dynamic-form *ngIf="form" [form]="form" (formSubmit)="onFormSubmit()"></app-dynamic-form>
+<app-form *ngIf="form" [form]="form" (formSubmit)="onFormSubmit()"></app-form>
