--- a/ODK.Website.Angular/src/app/components/account/subscription/subscription.component.html
+++ b/ODK.Website.Angular/src/app/components/account/subscription/subscription.component.html
@@ -1,5 +1,5 @@
 <app-body [breadcrumbs]="breadcrumbs">
-    <app-dynamic-form *ngIf="form" [form]="form"></app-dynamic-form>
+    <app-form *ngIf="form" [form]="form"></app-form>
     <ng-container *ngIf="chapterSubscriptions">
         <h2>Renew membership</h2>
         <div class="mb-3" *ngFor="let chapterSubscription of chapterSubscriptions">
