--- a/ODK.Website.Angular/src/app/modules/admin/components/events/event-form/event-form.component.html
+++ b/ODK.Website.Angular/src/app/modules/admin/components/events/event-form/event-form.component.html
@@ -1,1 +1,1 @@
-<app-dynamic-form *ngIf="dynamicForm" [form]="dynamicForm" (formSubmit)="onFormSubmit()"></app-dynamic-form>
+<app-form *ngIf="form" [form]="form" (formSubmit)="onFormSubmit()"></app-form>
