--- a/ODK.Website.Angular/src/app/components/account/purchase-subscription/purchase-subscription.component.html
+++ b/ODK.Website.Angular/src/app/components/account/purchase-subscription/purchase-subscription.component.html
@@ -2,7 +2,8 @@
     <div class="card">
         <div class="card-body">
             <h5 class="card-title">{{chapterSubscription.title}}</h5>
-            <div class="card-text" [innerHtml]="description">
+            <div class="card-text">
+                <app-raw-html [html]="chapterSubscription.description"></app-raw-html>
             </div>
             <div>
                 <app-payment-button [payment]="payment" [close]="close" (cardSubmit)="onCardSubmit($event)"></app-payment-button>
