--- a/ODK.Website.Angular/src/app/components/events/event/event.component.html
+++ b/ODK.Website.Angular/src/app/components/events/event/event.component.html
@@ -4,7 +4,7 @@
             <h2>{{event.location}}</h2>
             <h2>{{event.date | date:'fullDate'}}</h2>
             <h3 *ngIf="event.time">{{event.time}}</h3>
-            <p *ngIf="event.description">{{event.description}}</p>
+            <app-raw-html *ngIf="event.description" [html]="event.description"></app-raw-html>
         </ng-container>
 
         <ng-container app-sidebar>
