Validate required html

--- a/ODK.Website.Angular/src/app/modules/admin/components/forms/inputs/html-editor/html-editor.component.html
+++ b/ODK.Website.Angular/src/app/modules/admin/components/forms/inputs/html-editor/html-editor.component.html
@@ -1,4 +1,4 @@
 <div [formGroup]="formGroup">
-  <ckeditor [editor]="Editor" [id]="viewModel.id" [formControlName]="viewModel.id">
+  <ckeditor [editor]="Editor" [id]="viewModel.id" [formControlName]="viewModel.id" [required]="required">
   </ckeditor>
 </div>
