--- a/ODK.Website.Angular/src/css/bootstrap/main.scss
+++ b/ODK.Website.Angular/src/css/bootstrap/main.scss
@@ -9,6 +9,9 @@
 
  @import "node_modules/bootstrap/scss/functions";
  @import "node_modules/bootstrap/scss/variables";
+
+ @import "_postvariables";
+
  @import "node_modules/bootstrap/scss/mixins";
  @import "node_modules/bootstrap/scss/root";
  @import "node_modules/bootstrap/scss/reboot";
