--- a/ODK.Website.Angular/src/app/modules/forms/components/error-messages/error-messages.component.html
+++ b/ODK.Website.Angular/src/app/modules/forms/components/error-messages/error-messages.component.html
@@ -1,3 +1,3 @@
 <ng-container *ngIf="messages">
-    <div *ngFor="let message of messages" class="text-danger">{{message}}</div>    
+    <div *ngFor="let message of messages" class="text-danger mt-3">{{message}}</div>
 </ng-container>
