--- a/ODK.Website.Angular/src/app/modules/forms/components/form-controls/form-controls.component.html
+++ b/ODK.Website.Angular/src/app/modules/forms/components/form-controls/form-controls.component.html
@@ -1,6 +1,7 @@
 <ng-container *ngIf="form && form.controls && formGroup">
   <ng-container *ngFor="let control of form.controls">
-      <app-form-control [formGroup]="formGroup" [updated]="updated" [validated]="validated" [viewModel]="control"
+      <app-form-control [formGroup]="formGroup" [formSubmit]="formSubmit" [updated]="updated"
+        [validated]="validated" [viewModel]="control"
         (valueChange)="onValueChange()">
       </app-form-control>
   </ng-container>
