--- a/ODK.Website.Angular/src/app/components/events/event/event.component.html
+++ b/ODK.Website.Angular/src/app/components/events/event/event.component.html
@@ -1,12 +1,12 @@
 <app-body *ngIf="event" [breadcrumbs]="breadcrumbs">
     <app-page-with-sidebar>
         <ng-container app-main>
-            <h2>{{event.location}}</h2>
+            <h2>{{venue.name}}</h2>
             <h2>{{event.date | date:'fullDate'}}</h2>
             <h3 *ngIf="event.time">{{event.time}}</h3>
             <app-raw-html *ngIf="event.description" [html]="event.description"></app-raw-html>
-            <div *ngIf="event.mapQuery" class="d-none d-md-block">
-              <app-google-map [query]="event.mapQuery"></app-google-map>
+            <div *ngIf="venue.mapQuery" class="d-none d-md-block">
+              <app-google-map [query]="venue.mapQuery"></app-google-map>
             </div>
         </ng-container>
 
