--- a/ODK.Website.Angular/src/app/components/events/events/events.component.html
+++ b/ODK.Website.Angular/src/app/components/events/events/events.component.html
@@ -1,3 +1,3 @@
 <app-body>
-    <app-event-list [events]="events"></app-event-list>
+    <app-event-list [viewModels]="viewModels"></app-event-list>
 </app-body>
