--- a/ODK.Website.Angular/src/app/modules/admin/components/events/event/event.component.html
+++ b/ODK.Website.Angular/src/app/modules/admin/components/events/event/event.component.html
@@ -1,14 +1,14 @@
-<ng-container *ngIf="event">    
+<ng-container *ngIf="event">
     <h2>{{event.name}}</h2>
     <h5>{{event.date | date:'fullDate'}}</h5>
-    <h5>{{event.location}}</h5>
-    
+    <h5>{{venue.name}}</h5>
+
     <ngb-tabset type="pills">
         <ngb-tab title="Edit">
             <ng-template ngbTabContent>
                 <app-edit-event [chapter]="chapter" [event]="event"></app-edit-event>
             </ng-template>
-        </ngb-tab>        
+        </ngb-tab>
         <ngb-tab title="Invites">
             <ng-template ngbTabContent>
                 <app-event-invites [eventId]="event.id"></app-event-invites>
@@ -18,6 +18,6 @@
             <ng-template ngbTabContent>
                 <app-event-responses [eventId]="event.id"></app-event-responses>
             </ng-template>
-        </ngb-tab>        
-    </ngb-tabset>        
+        </ngb-tab>
+    </ngb-tabset>
 </ng-container>
