--- a/ODK.Website.Angular/src/app/modules/admin/components/venues/venues/venues.component.html
+++ b/ODK.Website.Angular/src/app/modules/admin/components/venues/venues/venues.component.html
@@ -8,7 +8,7 @@
           <tr>
               <th>Name</th>
               <th>Address</th>
-              <th>MapQuery</th>
+              <th>Map search</th>
           </tr>
       </thead>
       <tbody>
