--- a/ODK.Website.Angular/src/app/modules/forms/components/form/form.component.html
+++ b/ODK.Website.Angular/src/app/modules/forms/components/form/form.component.html
@@ -1,6 +1,6 @@
 <form *ngIf="form" (ngSubmit)="onSubmit()" [class.was-validated]="state.validated" novalidate>
   <fieldset [attr.disabled]="submitting ? 'disabled' : null" class="overlay-container">
-    <app-form-controls [form]="form" [state]="state" [validated]="state.validated" [formSubmit]="formSubmit">
+    <app-form-controls [form]="form" [state]="state" [validated]="state.validated" [validateForm]="validateForm">
     </app-form-controls>
     <ng-container *ngIf="form.buttonText">
         <div class="d-flex align-items-center">
