Add chapter questions to about page

--- a/ODK.Website.Angular/src/app/modules/forms/components/form-control/form-control.component.html
+++ b/ODK.Website.Angular/src/app/modules/forms/components/form-control/form-control.component.html
@@ -1,5 +1,6 @@
 <div class="form-group" [class.required]="required">
-  <app-form-control-label *ngIf="showLabel && viewModel.label.text" [controlId]="viewModel.id" [viewModel]="viewModel.label">
+  <app-form-control-label *ngIf="showLabel && viewModel.label.text" 
+    [controlId]="viewModel.id" [viewModel]="viewModel.label">
   </app-form-control-label>
   <div #inputcontainer>
   </div>
