--- a/ODK.Website.Angular/src/css/main.scss
+++ b/ODK.Website.Angular/src/css/main.scss
@@ -12,6 +12,7 @@
 @import "_lists";
 @import "_modal";
 @import "_navbar";
+@import "_overlay";
 @import "_sections";
 @import "_sidebar";
 @import "_tabs";
