Add loading to event page

--- a/ODK.Website.Angular/src/app/components/events/event/event.component.html
+++ b/ODK.Website.Angular/src/app/components/events/event/event.component.html
@@ -1,4 +1,4 @@
-<app-body *ngIf="event" [breadcrumbs]="breadcrumbs">
+<app-body *appLoading="!event" [breadcrumbs]="breadcrumbs">
     <app-page-with-sidebar>
         <ng-container app-main>
             <h2>{{venue.name}}</h2>
