Show response icon in event lists

--- a/ODK.Website.Angular/src/app/components/events/event-response-icon/event-response-icon.component.html
+++ b/ODK.Website.Angular/src/app/components/events/event-response-icon/event-response-icon.component.html
@@ -1,5 +1,7 @@
 <button *ngIf="buttonClass" type="button" 
     [attr.class]="'btn-icon event-response-option event-response-option--' + buttonClass"
-    [class.active]="active" (click)="onClick()">
-    <i [attr.class]="'fas icon--event-response ' + iconClass" [ngbTooltip]="tooltip" container="body"></i>
+    [class.active]="active || readOnly" (click)="onClick()">
+    <i [ngClass]="'fas icon--event-response ' + iconClass" [class.icon--event-response--sm]="readOnly"
+      [ngbTooltip]="tooltip" container="body">      
+    </i>
 </button>
