--- a/ODK.Website.Angular/src/app/components/members/list-member/list-member.component.html
+++ b/ODK.Website.Angular/src/app/components/members/list-member/list-member.component.html
@@ -1,6 +1,6 @@
-<div *ngIf="member" class="card member-tile">
-    <a *ngIf="link" [routerLink]="link" [ngbTooltip]="hideName ? member.fullName : ''">
-        <app-member-image [maxWidth]="maxWidth" [member]="member"></app-member-image>
-        <div *ngIf="!hideName">{{member.fullName}}</div>
-    </a>
+<div *ngIf="member" class="card member-tile" [class.member-tile-sm]="size === 'sm'">
+  <a *ngIf="link" [routerLink]="link" [ngbTooltip]="size === 'sm' ? member.fullName : ''">
+    <app-member-image [maxWidth]="maxWidth" [member]="member"></app-member-image>
+    <div *ngIf="size !== 'sm'">{{member.fullName}}</div>
+  </a>
 </div>
