--- a/ODK.Website.Angular/src/app/modules/shared/components/members/member-image/member-image.component.html
+++ b/ODK.Website.Angular/src/app/modules/shared/components/members/member-image/member-image.component.html
@@ -1,3 +1,3 @@
 <ng-container *appLoading="loading">
-    <img *ngIf="image" [style.max-width.px]="maxWidth" class="card-img-top" [attr.src]="image" [attr.alt]="'Photo of ' + member.fullName" />
+    <img *ngIf="image" class="card-img-top" [attr.src]="image" [attr.alt]="'Photo of ' + member.fullName" />
 </ng-container>
