--- a/ODK.Website.Angular/src/app/modules/admin/components/members/members/members.component.html
+++ b/ODK.Website.Angular/src/app/modules/admin/components/members/members/members.component.html
@@ -3,17 +3,24 @@
     <button class="btn btn-link" (click)="file.click()">Upload pictures</button>
 </p>
 
-<table *ngIf="members" class="table table-striped">
+<table *ngIf="viewModels" class="table table-striped">
     <thead>
         <tr>
-            <th>Name</th>          
-            <th>Picture</th>
+            <th>Name</th>   
+            <th>Type</th>       
+            <th>Expires</th>       
         </tr>
     </thead>
     <tbody>
-        <tr *ngFor="let member of members">
-            <td><a [routerLink]="getMemberUrl(member)">{{member.fullName}}</a></td>
-            <td><app-member-image [maxWidth]="100" [member]="member"></app-member-image></td>
+        <tr *ngFor="let viewModel of viewModels">
+            <td><a [routerLink]="getMemberUrl(viewModel.member)">{{viewModel.member.fullName}}</a></td>
+            <td>{{subscriptionTypes[viewModel.subscription.type]}}</td>
+            <td>
+              <span [class.text-danger]="viewModel.subscription.expiryDate < today"
+                [class.text-warning]="viewModel.subscription.expiryDate <= subscriptionWarningDate">
+                {{viewModel.subscription.expiryDate | date:'yyyy-MM-dd' }}
+              </span>              
+            </td>
         </tr>
     </tbody>
 </table>
