--- a/ODK.Website.Angular/src/app/modules/admin/components/events/events/events.component.html
+++ b/ODK.Website.Angular/src/app/modules/admin/components/events/events/events.component.html
@@ -1,4 +1,4 @@
-<ng-container *ngIf="viewModels">
+<ng-container *appLoading="!viewModels">
     <p>
         <a class="btn btn-primary" [routerLink]="links.createEvent">Create</a>
     </p>
