Send event emails using MailChimp

--- a/ODK.Website.Angular/src/app/components/events/event/event.component.html
+++ b/ODK.Website.Angular/src/app/components/events/event/event.component.html
@@ -11,7 +11,7 @@
         </ng-container>
 
         <ng-container app-sidebar>
-            <app-event-sidebar [eventId]="eventId"></app-event-sidebar>
+            <app-event-sidebar [event]="event"></app-event-sidebar>
         </ng-container>
     </app-page-with-sidebar>
 </app-body>
