--- a/ODK.Website.Angular/src/app/modules/admin/components/events/event-invites/event-invites.component.html
+++ b/ODK.Website.Angular/src/app/modules/admin/components/events/event-invites/event-invites.component.html
@@ -1,4 +1,4 @@
-<ng-container *ngIf="invites">
+<ng-container *appLoading="!invites">
     <p *ngIf="invites.sent === 0">
         <button class="btn btn-primary" (click)="onSend()">Send invites</button>
     </p>
@@ -6,9 +6,5 @@
     <div class="row">
         <div class="col-3">Sent</div>
         <div class="col-3">{{invites.sent}}</div>
-    </div>
-    <div class="row text-danger" *ngIf="invites.sent > invites.delivered">
-        <div class="col-3">Failed</div>
-        <div class="col-3">{{invites.sent - invites.delivered}}</div>
     </div>
 </ng-container>
