--- a/ODK.Website.Angular/src/app/modules/admin/components/events/event/event.component.html
+++ b/ODK.Website.Angular/src/app/modules/admin/components/events/event/event.component.html
@@ -1,4 +1,4 @@
-<ng-container *ngIf="event">
+<ng-container *appLoading="!event">
     <h2>{{event.name}}</h2>
     <h5>{{event.date | date:'fullDate'}}</h5>
     <h5>{{venue.name}}</h5>
