Support for send emails by SendInBlue

--- a/ODK.Website.Angular/src/app/modules/admin/components/events/event-invites/event-invites.component.html
+++ b/ODK.Website.Angular/src/app/modules/admin/components/events/event-invites/event-invites.component.html
@@ -1,6 +1,9 @@
 <ng-container *appLoading="!invites">
     <p *ngIf="invites.sent === 0">
-        <button class="btn btn-primary" (click)="onSend()">Send invites</button>
+        <button class="btn btn-primary" [attr.disabled]="sending ? 'disabled' : null" 
+          (click)="onSend()">
+          Send invites
+        </button>
     </p>
     
     <div class="row">
