--- a/ODK.Website.Angular/src/app/modules/admin/components/members/members/members.component.html
+++ b/ODK.Website.Angular/src/app/modules/admin/components/members/members/members.component.html
@@ -1,3 +1,4 @@
+<h2>Members</h2>
 <p *ngIf="superAdmin">
     <input type="file" accept="image/*" #file placeholder="Choose file" (change)="onUploadPicture(file.files)" class="d-none" multiple />
     <button class="btn btn-link" (click)="file.click()">Upload pictures</button>
