--- a/ODK.Website.Angular/src/app/modules/admin/components/events/create-event/create-event.component.html
+++ b/ODK.Website.Angular/src/app/modules/admin/components/events/create-event/create-event.component.html
@@ -1,3 +1,4 @@
+<h2>Create new event</h2>
 <app-event-form *ngIf="chapter" buttonText="Create" [chapter]="chapter" [formCallback]="formCallback"
     (formSubmit)="onFormSubmit($event)">
 </app-event-form>
