--- a/ODK.Website.Angular/src/app/modules/admin/components/events/events/events.component.html
+++ b/ODK.Website.Angular/src/app/modules/admin/components/events/events/events.component.html
@@ -1,3 +1,4 @@
+<h2>Events</h2>
 <ng-container *appLoading="!viewModels">
   <p>
     <a class="btn btn-primary" [routerLink]="links.createEvent">Create</a>
